[package]
name = "into-jsvalue-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
into-jsvalue-derive = { path = "../into-jsvalue-derive"}
gloo-net = "0.5.0"
tsify = "0.4.5"
wasm-bindgen = "0.2.92"
serde-wasm-bindgen = "0.6.5"
serde = "1.0.203"
wasm-bindgen-futures = "0.4.42"

